# arma-mods

./: README.md
.github/workflows/: deploy.yml
GroupLeaderReplicatedObjective/: addon.gproj  resourceDatabase.rdb
GroupLeaderReplicatedObjective/scripts/Game/Campaign/: LGO_TaskNetworkComponent.c
RadioDirectionalFinding/: addon.gproj  resourceDatabase.rdb  test.layout  test2.layout
RadioDirectionalFinding/Prefabs/MP/: PlayerRadioSpawnPoint.et
RadioDirectionalFinding/Prefabs/SP01/: SP01_Radio_ANPRC68.et
RadioDirectionalFinding/Prefabs/Systems/DeployableRadios/: DeployableItemRadioReplacementUSSR.et
RadioDirectionalFinding/Prefabs/Systems/MilitaryBase/: ConflictMilitaryBase.et  ConflictRelayRadio.et
RadioDirectionalFinding/test_Layers/: default.layer
RankOnPlayerName/: addon.gproj  resourceDatabase.rdb
RankOnPlayerName/Configs/NameTags/: NameTagPlayerNameElement.conf  NametagFriendlies.conf  NametagSingle.conf
ReforgerEventsApi/: addon.gproj  resourceDatabase.rdb
ReforgerEventsApi/Configs/System/: chimeraMenus.conf
ReforgerEventsApi/Language/: localization.en_us.conf  localization.st
ReworkedMapMarkers/: addon.gproj  resourceDatabase.rdb
ReworkedMapMarkers/Configs/Map/: MapMarkerConfig.conf
ReworkedMapMarkers/Prefabs/Markers/: LRMM_MapMarker.et  MapMarkerEntityBase.et  MapMarkerSquadLeader.et
doc/: book.toml
doc/src/: SUMMARY.md
doc/src/modding_notes/: building.md  radios.md  random.md  utilities.md
doc/src/mods/: group_objectives.md  improved_name_tags.md
enfusion_pak/: Cargo.toml
enfusion_pak/src/: lib.rs  main.rs
(+41 files in other folders)
